--- a/src/main/resources/templates/confirm-service-2.html
+++ b/src/main/resources/templates/confirm-service-2.html
@@ -6,21 +6,24 @@
     <title>Confirm service</title>
 </head>
 <body>
-<div layout:fragment="content">
-    <form action="/confirm-service-3" method="POST">
-        <div class="form-group">
-            <label for="ticketNumber">Ticket number</label>
-            <input class="form-control" type="text" id="ticketNumber" disabled th:value="${serviceTicketNumber}">
-        </div>
+<main layout:fragment="content">
+    <div class="container mt-5 py-2">
+        <h1>Confirm Service</h1>
+        <form action="/confirm-service-3" method="POST">
+            <div class="form-group">
+                <label for="ticketNumber">Ticket number</label>
+                <input class="form-control" type="text" id="ticketNumber" disabled th:value="${serviceTicketNumber}">
+            </div>
 
-        <div class="form-group">
-            <label for="time">Time of day</label>
-            <input class="form-control" type="text" id="time" disabled th:value="${time}">
-        </div>
+            <div class="form-group">
+                <label for="time">Time of day</label>
+                <input class="form-control" type="text" id="time" disabled th:value="${time}">
+            </div>
 
-        <button type="submit" class="btn btn-primary">Confirm service schedule</button>
+            <button type="submit" class="btn btn-primary">Confirm service schedule</button>
 
-    </form>
-</div>
+        </form>
+    </div>
+</main>
 </body>
 </html>
