--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -14,6 +14,11 @@
     <!--    Bootstrap-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
+    <!-- Custom Styles -->
+    <link rel="stylesheet" href="/style.css">
 
     <!--    Dark Cyborg-->
     <!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/cyborg/bootstrap.min.css">-->
@@ -28,39 +33,47 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" th:href="@{/cars}">Car Store</a>
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" th:href="@{/cars}">Cars</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" th:href="@{/persons}">Users</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" th:href="@{/scheduled-services}">Services</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" th:href="@{/schedule-service}">Schedule service</a>
-            </li>
-        </ul>
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" th:href="@{/myprofile}">My Profile</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" th:href="@{/register-totp}">Register second factor</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/logout">Logout</a>
-            </li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand font-weight-bold" th:href="@{/cars}">Car Store</a>
+        <button class="navbar-toggler" type="button"
+          data-toggle="collapse" data-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false"
+          aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav mr-auto">
+              <li class="nav-item">
+                  <a class="nav-link font-weight-bold" th:href="@{/cars}">Cars</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link font-weight-bold" th:href="@{/persons}">Users</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link font-weight-bold" th:href="@{/scheduled-services}">Services</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link font-weight-bold" th:href="@{/schedule-service}">Schedule service</a>
+              </li>
+          </ul>
+          <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                  <a class="nav-link font-weight-bold" th:href="@{/myprofile}">My Profile</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link font-weight-bold" th:href="@{/register-totp}">Register second factor</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link font-weight-bold" href="/logout">Logout</a>
+              </li>
+          </ul>
+        </div>
     </nav>
 </header>
 <main class="container" layout:fragment="content">
     <p>Loading...</p>
 </main>
-<footer>
+<footer class="fixed-bottom">
     <div class="footer-copyright text-center py-3">
         © 2019 Copyright: <a th:href="@{/cars}"> Car Store</a>
     </div>
