--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,15 +12,23 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
             integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
             crossorigin="anonymous"></script>
+    <!-- Custom styles -->
+    <style type="text/css">
+        body {
+            background-image: linear-gradient(
+                to right, #70a4e0, #83e9e6
+            );
+        }
+    </style>
 </head>
 <body>
-<div class="d-flex flex-column justify-content-around align-items-center vh-100">
-    <form class="d-flex flex-column justify-content-around" style="height: 200px" method="POST" action="/perform-login">
+<main class="d-flex flex-column justify-content-around align-items-center vh-100">
+    <form class="d-flex flex-column justify-content-around form-group" style="height: 200px" method="POST" action="/perform-login">
         <input type="text" class="form-control" name="username" placeholder="Username" required>
         <input type="text" class="form-control" name="password" placeholder="Password" required>
         <input type="number" class="form-control" name="totp" placeholder="2nd Factor">
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
-</div>
+</main>
 </body>
 </html>
