--- a/src/main/resources/templates/person.html
+++ b/src/main/resources/templates/person.html
@@ -1,76 +1,84 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout}" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Profile</title>
-</head>
-<body>
-<div layout:fragment="content">
-    <h1>Profile</h1>
-    <div class="row">
-        <form method="POST" action="/update-person" class="col-5">
-            <div class="form-group">
-                <label for="firstName">First Name</label>
-                <input type="text" name="firstName" class="form-control" id="firstName" th:value="${person.firstName}">
-            </div>
-            <div class="form-group">
-                <label for="lastName">Last Name</label>
-                <input type="text" name="lastName" class="form-control" id="lastName" th:value="${person.lastName}">
-            </div>
-            <div class="form-group">
-                <label for="personalNumber">Personal Number</label>
-                <input type="text" name="personalNumber" class="form-control" id="personalNumber" th:value="${person.personalNumber}">
-            </div>
-            <div class="form-group">
-                <label for="address">Address</label>
-                <input type="text" name="address" class="form-control" id="address" th:value="${person.address}">
-            </div>
-            <input type="hidden" name="id" class="form-control" id="id" th:value="${person.id}">
-            <button type="submit" class="btn btn-primary">Save</button>
-        </form>
-    </div>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport"
+              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Profile</title>
+    </head>
+    <body>
+        <main layout:fragment="content">
+            <div class="container mt-5 py-2 users">
+                <h1>Profile</h1>
+                <form method="POST" action="/update-person" class="form-horizontal">
+                    <div class="form-group">
+                        <label class="control-label col-md-3" for="firstName">First Name</label>
+                        <div class="col-sm-9 col-md-9">
+                            <input type="text" name="firstName" class="form-control" id="firstName" th:value="${person.firstName}">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-3" for="lastName">Last Name</label>
+                        <div class="col-sm-9 col-md-9">
+                        <input type="text" name="lastName" class="form-control" id="lastName" th:value="${person.lastName}">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-3" for="personalNumber">Personal Number</label>
+                        <div class="col-sm-9 col-md-9">
+                        <input type="text" name="personalNumber" class="form-control" id="personalNumber" th:value="${person.personalNumber}">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-3" for="address">Address</label>
+                        <div class="col-sm-9 col-md-9">
+                        <input type="text" name="address" class="form-control" id="address" th:value="${person.address}">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-3">
+                            <input type="hidden" name="id" class="form-control" id="id" th:value="${person.id}">
+                            <button type="submit" class="form-control btn btn-primary">Save</button>
+                        </div>
+                        <div class="offset-md-6 offset-xs-0 col-md-3">
+                            <button type="submit" class="btn btn-danger form-control" data-toggle="modal" data-target="#deleteModal">Delete User</button>
 
-
-    <div class="mt-2">
-        <button type="submit" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal">Delete User</button>
-    </div>
-
-    <div class="modal" tabindex="-1" role="dialog" id="deleteModal">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Delete User</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+                        </div>
+                    </div>
+                </form>
+                <div class="modal" tabindex="-1" role="dialog" id="deleteModal">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title">Delete User</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <p>Are you sure you want to delete this user?</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="submit" class="btn btn-danger" id="deleteUser">Delete</button>
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="modal-body">
-                    <p>Are you sure you want to delete this user?</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="submit" class="btn btn-danger" id="deleteUser">Delete</button>
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                </div>
             </div>
-        </div>
-    </div>
-
-    <script>
-        window.addEventListener('load', function() {
-            document.getElementById('deleteUser').addEventListener('click', function () {
-                const personId = document.getElementById('id').value;
-
-                fetch('/persons/' +  + personId, {
-                    method: 'DELETE'
-                }).then(function() { window.location.href = '/persons'; });
-            });
-        });
-    </script>
-</div>
-
-</body>
+        </main>
+    </body>
 </html>
+<script>
+    window.addEventListener('load', function() {
+        document.getElementById('deleteUser').addEventListener('click', function () {
+            const personId = document.getElementById('id').value;
+
+            fetch('/persons/' +  + personId, {
+                method: 'DELETE'
+            }).then(function() { window.location.href = '/persons'; });
+        });
+    });
+</script>
