--- a/src/main/resources/templates/schedule-service.html
+++ b/src/main/resources/templates/schedule-service.html
@@ -6,22 +6,25 @@
     <title>Schedule service</title>
 </head>
 <body>
-<div layout:fragment="content">
-    <form action="/schedule-service" method="POST">
-        <div class="form-group">
-            <label for="date">Date</label>
-            <input id="date" class="form-control" type="date" name="date"/>
-        </div>
-        <div class="form-group">
-            <label for="carModel">Car Model</label>
-            <input type="text" id="carModel" name="carModel" class="form-control" />
-        </div>
-        <div class="form-group">
-            <label for="remark">Remark</label>
-            <textarea id="remark" name="remark" class="form-control"></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary">Schedule</button>
-    </form>
-</div>
+<main layout:fragment="content">
+    <div class="container mt-5 py-2">
+        <h1>Schedule Service</h1>
+        <form action="/schedule-service" method="POST">
+            <div class="form-group">
+                <label for="date">Date</label>
+                <input id="date" class="form-control" type="date" name="date"/>
+            </div>
+            <div class="form-group">
+                <label for="carModel">Car Model</label>
+                <input type="text" id="carModel" name="carModel" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label for="remark">Remark</label>
+                <textarea id="remark" name="remark" class="form-control"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Schedule</button>
+        </form>
+    </div>
+</main>
 </body>
 </html>
